# modelguard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
signatures/: registry.yaml
src/modelguard/: __init__.py  cli.py  scanner.py  types.py
src/modelguard/db/: vulnerabilities.py
src/modelguard/formats/: gguf.py  pytorch.py  safetensors.py
src/modelguard/sbom/: generator.py
src/modelguard/scanners/: activations.py  behavioral.py  registry.py  weights.py
src/modelguard/signatures/: known_backdoors.py
tests/: test_formats.py  test_scanner.py
