[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelguard"
version = "0.1.0"
description = "ML supply chain security scanner — detect backdoors, poisoned layers, and adversarial triggers in model weights"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ModelGuard Contributors"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "security", "machine-learning", "supply-chain", "backdoor-detection",
    "model-safety", "ai-security", "vulnerability-scanner",
]
dependencies = [
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "requests>=2.28",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
gguf = ["gguf>=0.6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = ["modelguard[torch,gguf,dev]"]

[project.scripts]
modelguard = "modelguard.cli:main"

[project.urls]
Homepage = "https://github.com/ob4cl/modelguard"
Repository = "https://github.com/ob4cl/modelguard.git"
Issues = "https://github.com/ob4cl/modelguard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
